// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alert component 1`] = `
<div
  className="Danger"
>
  <div
    className="Content"
  >
    Content
  </div>
</div>
`;

exports[`alert component 2`] = `
<div
  className="Info"
>
  <div
    className="Content"
  >
    Content
  </div>
</div>
`;

exports[`alert component 3`] = `
<div
  className="Warning"
>
  <div
    className="Content"
  >
    Content
  </div>
</div>
`;

exports[`alert component 4`] = `
<div
  className="Success"
>
  <div
    className="Content"
  >
    Content
  </div>
</div>
`;
